--- a/final_project_template/css/main.css
+++ b/final_project_template/css/main.css
@@ -19,16 +19,22 @@ img {
 
 body {
   font-family: 'DM Serif Text';
-  background-image: url('../img/bg.png');
-  background-attachment: fixed;
-  background-position: left top;
-  background-repeat: no-repeat;
   color: #2b5c83;
+
+  /* background-image: url('../img/bg.png');
+  background-attachment: scroll;
+  background-position: left top;
+  background-repeat: no-repeat; */
+
 }
 
 header {
   display: inline-flex;
   background-color: #73e2ff;
+}
+
+section {
+  position: relative;
 }
 
 /* ---- navigation  ----- */
@@ -39,7 +45,7 @@ nav a {
   color: #2b5c83;
 }
 
-header nav {
+nav {
   display: inline;
   text-align: left;
   position: fixed;
@@ -47,8 +53,9 @@ header nav {
   left: 0;
   right: 0;
   background-color: #89cfe1;
-  padding: 25px 0px 25px 90px;
+  padding: 25px 0px 30px 137px;
   word-spacing: 20px;
+  z-index: 1;
 }
 
 .hamburger {
@@ -60,13 +67,14 @@ header nav {
 
 .social {
   display: inline-flex;
-  padding-left: 1158px;
+  padding-left: 1125px;
   position: fixed;
   margin-top: 2px;
+  z-index: 1;
 }
 
 .social i {
-  padding-left: 80px;
+  padding-left: 100px;
   font-size: 50px;
   color: #2b5c83;
 }
@@ -77,41 +85,92 @@ header nav {
 
 /* ---- Start of Page ----- */
 
-section {
+aside {
   font-size: 60px;
-  margin-left: 1180px;
-  margin-top: 200px;
-  position: fixed;
-
+  margin-left: 1237px;
+  margin-top: 248px;
 }
 
-section a {
+aside a {
   text-decoration: none;
   color: #2b5c83;
+  padding-left: 30px;
 }
 
 /* ------styles------- */
 
+h2 {
+  padding: 305px 0px 0px 252px;
+  font-size: 80px;
+  color: white;
+  position: absolute;
+  z-index: 0;
+}
 
 h1 {
   font-size: 68px;
-  text-align: center;
-  padding-left: 590px;
+  padding-left: 620px;
   position: fixed;
   margin: auto;
-  top: 0px;
+  top: -10px;
+  font-family: "Oswald";
+  z-index: 1;
 }
 
-
-
-
-h2 {
-  padding: 350px 0px 0px 240px;
-  font-size: 58px;
-  position: fixed;
-  color: white;
+h3 {
+  margin-top: 600px;
+  margin-left: 20px;
+  font-size: 70px;
+  border-bottom: 2px solid;
 }
 
+/* slide effect on menu */
+.slide {
+  width: 600px;
+  height: auto;
+  overflow: visible;
+  display: block;
+  margin: 0 auto;
+  background-image: linear-gradient(to right, #fff 50%, #619ac5 50%);
+  background-size: 200% 100%;
+  background-repeat: no-repeat;
+  -webkit-transition: all 0.25s ease-in;
+  -moz-transition: all 0.25s ease-in;
+  transition: all 0.25s ease-in;
+}
+
+.slide:hover {
+  -webkit-transition: all 0.25s ease-in;
+  -moz-transition: all 0.25s ease-in;
+  transition: all 0.25s ease-in;
+  /** START THE FINAL STATE STYLING **/
+  background-position: bottom right;
+  color: #fff;
+}
+
+/* ----------------------------------------
+SECTION
+------------------------------------------- */
+article img {
+  height: 500px;
+  object-fit: contain;
+  margin-left: 20px;
+
+}
+
+article p {
+  position: relative;
+  left: 375px;
+  bottom: 534px;
+  width: 300px;
+}
+
+/* article p {
+  margin-left: 400px;
+  height: 200px;
+  width: 400px;
+}
+*/
 
 /* ----media screens----- */
 
